force-app/main/default/objects/VisualAntidote__FastFormsSiteInfo__c/VisualAntidote__FastFormsSiteInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>App keys information</description>
    <label>Formstack Site Information</label>
</CustomObject>