force-app/main/default/objects/VisualAntidote__FastFormsSiteInfo__c/fields/VisualAntidote__ClientID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ClientID__c</fullName>
    <inlineHelpText>This field is deprecated.</inlineHelpText>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>