force-app/main/default/objects/VisualAntidote__FastFormsSiteInfo__c/fields/VisualAntidote__FastFormsSiteUrl__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__FastFormsSiteUrl__c</fullName>
    <label>Formstack Site Url</label>
    <type>Url</type>
</CustomField>